--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <div class="mypic">{{site.picture}}</div>
       <h1>{{ site.title }}</h1>
       <p class="lead">{{ site.description }}</p>
     </div>
