--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,9 @@
 <div class="sidebar">
+  <div class="mypic">{{site.picture}}</div>
   <div class="container sidebar-sticky">
-    <div class="sidebar-about">
-      <div class="mypic">{{site.picture}}</div>
-      <h1>{{ site.title }}</h1>
-      <p class="lead">{{ site.description }}</p>
+    <div class="deets">
+      <div class="name">{{site.title}}</div>
+      <div class="jobtitle"> {{site.description}}</div>
     </div>
 
     <ul class="sidebar-nav">
@@ -26,10 +26,8 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
-      <li class="sidebar-nav-item">Currently v{{ site.version }}</li>
+      <li class="sidebar-nav-item"><a href="{{ site.linkedin }}">LinkedIn</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
