--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,12 @@
 .mypic {
-  margin-top: 10%;
+  margin-top: 2%;
+  margin-bottom: 1%;
+}
+
+.sidebar {
+  font-family: 'Fresca', sans-serif;
+}
+
+.name {
+  font-size: '2rem';
 }
