adds angelist link, changes size of picture, edits config

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,8 @@
         {% endif %}
       {% endfor %}
       <li class="sidebar-nav-item"><a href="{{ site.linkedin }}">LinkedIn</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.github }}">GitHub</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.angel }}">Angelist</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
