--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,9 +25,10 @@
             </li>
           {% endif %}
         {% endif %}
-      {% endfor %}
+      {% endfor %}<!-- 
+      <li class="sidebar-nav-item"><a href="{{ site.linkedin }}">LinkedIn</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.github }}">GitHub</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.angel }}">Angelist</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.angel }}">Angelist</a></li> -->
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
