--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,11 @@
 .sidebar {
   font-family: 'Fresca', sans-serif;
 }
-
-.name {
-  font-size: '2rem';
+.name{
+  font-size: 2rem;
+  color: rgba(51, 99, 180, 1);
+}
+.jobtitle {
+  font-size: 1.3rem;
+  color: rgba(255, 255, 255, 0.88);
 }
