--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -57,7 +57,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #202020;
+  background-color: rgba(8, 36, 107, 0.87);
 }
 @media (min-width: 48rem) {
   .sidebar {
