--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,9 +3,15 @@
 }
 .name{
   font-size: 2rem;
-  color: rgba(51, 99, 180, 1);
+  color: rgba(255, 255, 255, 1);  
+  margin-left: 7px;
 }
 .jobtitle {
   font-size: 1.3rem;
   color: rgba(255, 255, 255, 0.88);
+  margin-left: 10px;
+}
+.contactIcon {
+  height: 2rem;
+  display: inline;
 }
