--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
     <div class="contactIcons">
       <a href="{{ site.linkedin }}"><img class="contactIcon" src="../public/images/linkedin.png"></a>
       <a href="{{ site.github }}"><img class="contactIcon" src="../public/images/Octocat.png"></a>
-      <a chref="{{ site.angel }}"><img class="contactIcon" src="../public/images/AngelList.png"></a>
+      <a href="{{ site.angel }}"><img class="contactIcon" src="../public/images/AngelList.png"></a>
     </div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
