--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,7 @@
   font-size: 1.3rem;
   color: rgba(255, 255, 255, 0.88);
   margin-left: 10px;
+  line-height: 0.5rem;
 }
 .contactIcon {
   height: 2rem;
