changed favicon and text size of site.  added some text into about section

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
-  <div class="mypic">{{site.picture}}</div>
-  <div class="deets">
+  <div class="container mypic">{{site.picture}}</div>
+  <div class="container deets">
       <div class="name">{{site.title}}</div>
       <div class="jobtitle"> {{site.description}}</div>
   </div>
